fix: Toast position shift as Modal closes
* prevent Toast notification position shift as Bootstrap Modal closes (i.e. after confirm delete shipment)

--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,17 @@
-:root {
-  scrollbar-gutter: stable; /* prevents Toast notification position shift after bootstrap modal closes */
-}
-
 html {
   font-size: 14px;
 }
 
-body {
-  padding-right: 0 !important; /* prevents Toast notification position shift after bootstrap modal closes */
-}
-
 .pointer {
   cursor: pointer;
+}
+
+/* prevent Toast notification position shift as Bootstrap Modal closes */
+.modal {
+  overflow-y: auto !important;
+}
+.modal-open {
+  overflow: auto !important;
+  overflow-x: hidden !important;
+  padding-right: 0 !important;
 }
